# microservicioGestionAcademica

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.install.yml  docker-compose.yml  init.sql  install.sh  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: config.py
app/controller/: alumno_controller.py
app/mapping/: __init__.py  especialidad_mapping.py  facultad_mapping.py  universidad_mapping.py
app/models/: __init__.py  alumno.py  especialidad.py  facultad.py  universidad.py
app/repositories/: __init__.py  alumno_repositorio.py  especialidad_repository.py  facultad_repository.py  universidad_repository.py
app/resources/: __init__.py  especialidad_resource.py  facultad_resource.py  universidad_resource.py
app/schemas/: __init__.py  especialidad_schema.py  facultad_schema.py  universidad_schema.py
app/services/: __init__.py  alumno_service.py  especialidad_service.py  facultad_service.py  universidad_service.py
app/validators/: __init__.py  validator.py
docker/: docker-compose.yml
locust_tests/: locustfile.py  reporte.html
migrations/versions/: 1ddfd09c4275_mensaje_descriptivo_de_la_migración.py  54b750a7250e_inicial.py  58e53a0c0982_initial.py  bfef212d291e_migracion_inicial.py  ff8de751d19f_mi_primer_migracion.py
test/: conftest.py  test_alumno_service.py  test_app.py  test_db.py  test_especialidad.py  test_facultad.py  test_universidad.py
utils/: hashid_utils.py
venv1/: pyvenv.cfg
venv1/Scripts/: activate  activate.bat  docxcompose-script.py  pisa-script.py  svg2pdf  xhtml2pdf-script.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  (+1 more)
